force-app/main/default/objects/Map_Finder_User_s_Filter__c/Map_Finder_User_s_Filter__c.object-meta.xml
<CustomObject>
    <label>Map Finder User&apos;s Filter</label>
    <nameField>
        <displayFormat>UF-{0000}</displayFormat>
        <label>Map Finder User&apos;s Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Map Finder User&apos;s Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>