force-app/main/default/objects/Map_Finder_User_s_Filter__c/fields/Filter_Key__c.field-meta.xml
<CustomField>
    <fullName>Filter_Key__c</fullName>
    <label>Filter Key</label>
    <length>18</length>
    <type>Text</type>
</CustomField>