force-app/main/default/objects/Map_Finder_User_s_Filter__c/fields/Filter_Owner__c.field-meta.xml
<CustomField>
    <fullName>Filter_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filter Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Map_Finder_User_s_Filters</relationshipName>
    <type>Lookup</type>
</CustomField>