force-app/main/default/objects/Map_Finder_User_s_Filter__c/fields/Is_Range__c.field-meta.xml
<CustomField>
    <fullName>Is_Range__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Range?</label>
    <type>Checkbox</type>
</CustomField>