force-app/main/default/objects/Map_Finder_User_s_Filter__c/fields/Map_Instance__c.field-meta.xml
<CustomField>
    <fullName>Map_Instance__c</fullName>
    <label>Map Instance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>