force-app/main/default/objects/Map_Finder_User_s_Filter__c/fields/Multi_picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>Multi_picklist_Value__c</fullName>
    <label>Multi-picklist Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>