force-app/main/default/objects/Map_Finder_User_s_Filter__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <length>40</length>
    <type>Text</type>
</CustomField>